# findash

./: .gitignore  db.sqlite3  pyproject.toml  render.yaml
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
templates/: base.html
templates/account/: signup.html
theme/static_src/: package-lock.json
