[tool.poetry]
name = "findash"
version = "0.1.0"
description = ""
authors = ["faadhil hakim <faadhil1991@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.1"
whitenoise = {extras = ["brotli"], version = "^5.3.0"}
gunicorn = "^20.1.0"
django-allauth = "~=0.42.0"
django-tailwind = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
